# agrosense

./: .dockerignore  .gitignore  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO  citation.cff  pyproject.toml  workflow.md
.docker/: agrosense.Dockerfile
Projekt1_Datensätze/Internationale Indikatoren/: py_func.py
Projekt1_Datensätze/Internationale Indikatoren/EinzeelneAufgabenCode/: 99911-0006-STAAT1_$F.csv  all.py
data/validation/: validation_data.gpkg
docs/: raw-dag.uxf  requirements.md
results/meta/: report-agrosense-baserun.html
src/: download_data.py  downloader.py
tests/: test_converter.py  test_download.py
validation/: validation_data.gpkg  validation_data.qgz
workflow/: Snakefile  main.nf  nextflow.config
workflow/module/: cropland_detection.nf  higher_level.nf  machine_learning.nf  preprocess.nf
